# fastapi-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  renovate.json
.github/workflows/: ci.yml  security.yml  update-precommit.yml
docs/superpowers/plans/: 2026-03-18-template-improvements.md
docs/superpowers/reviews/: 2026-03-21-pr18-code-review.md
docs/superpowers/specs/: 2026-03-18-template-improvements-design.md
migrations/: env.py  utils.py
migrations/versions/: 20251104_1759-84e41c456ef1_initial.py  20260319_1740-2b0640c7d0ad_.py
scripts/: init_db.py
secrets/: .env.example
src/: container.py  main.py  settings.py
src/contexts/auth/application/use_cases/: __init__.py  authenticate_with_api_key.py  create_api_key.py  create_user.py  delete_user.py  get_user.py  list_users.py  revoke_api_key.py
src/contexts/auth/domain/: aggregates.py  errors.py  events.py  repositories.py  services.py
src/contexts/auth/infrastructure/: container.py
src/contexts/auth/infrastructure/cli/: create_api_key_command.py  list_users_command.py
src/contexts/auth/infrastructure/http/: __init__.py  api_key_middleware.py  router.py
src/contexts/auth/infrastructure/persistence/: __init__.py  models.py  user_repository.py
src/contexts/shared/application/use_cases/: check_health.py
src/contexts/shared/domain/: aggregate_root.py  cache_client.py  errors.py  events.py  health_checker.py  pagination.py
src/contexts/shared/infrastructure/: container.py
src/contexts/shared/infrastructure/cache/: __init__.py  in_memory_cache_client.py
src/contexts/shared/infrastructure/events/: __init__.py  in_memory_event_bus.py  logging_subscriber.py  subscriber_registry.py
src/contexts/shared/infrastructure/http/: __init__.py  exception_handlers.py  rate_limit_middleware.py
src/contexts/shared/infrastructure/logger/: __init__.py  middleware.py  setup.py
src/contexts/shared/infrastructure/persistence/: base.py  database.py  database_health_checker.py
tests/: conftest.py
tests/contexts/auth/: conftest.py
tests/contexts/auth/e2e/: conftest.py  test_auth_endpoints.py  test_health_endpoint.py
tests/contexts/auth/integration/: test_user_repository.py
tests/contexts/auth/unit/: test_api_key_hashing.py  test_authenticate_with_api_key_use_case.py  test_create_api_key_use_case.py  test_create_user_use_case.py  test_delete_user_use_case.py  test_get_user_use_case.py  test_list_users_use_case.py  test_revoke_api_key_use_case.py  test_user_aggregate.py
tests/contexts/shared/unit/: test_check_health_use_case.py  test_domain_events.py  test_event_bus.py  test_exception_handlers.py  test_pagination.py  test_rate_limiter.py
tests/support/: containers.py  database.py  factories.py
