[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "dependency-injector>=4.48.2",
    "fastapi[standard]>=0.119.1",
    "greenlet>=3.2.4",
    "loguru>=0.7.3",
    "psutil>=7.1.1",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "typer>=0.19.2",
]

[project.scripts]
cli = "src.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = [
    "FAST",
    "ANN",
    "ASYNC",
    "S",
    "B",
    "A",
    "C4",
    "DTZ",
    "EM",
    "FA",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TD",
    "TC",
    "ARG",
    "PTH",
    "FLY",
    "I",
    "C90",
    "N",
    "PERF",
    "E",
    "W",
    "F",
    "PGH",
    "PL",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "UP",
    "FURB",
    "RUF",
    "TRY"
]
ignore = [
    "TC003",  # Move imports into TYPE_CHECKING block — breaks DI wiring at runtime
    "TC002",  # Move third-party imports into TYPE_CHECKING block — same reason
    "TC001",  # Move stdlib imports into TYPE_CHECKING block — same reason
    "RUF012",  # Mutable class attributes should be annotated with ClassVar — conflicts with Pydantic models
    "TRY003",  # Avoid long messages outside exception class — too verbose for inline raises
    "EM101",   # Exception must not use string literal — extracting to variable adds noise
    "EM102",   # Exception must not use f-string literal — same reason as EM101
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$" # Allow unused variables when underscore-prefixed.

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.commitizen]
name = "cz_gitmoji"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require database or external services)",
    "e2e: End-to-end tests (full application flow)",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/migrations/*",
    "*/__pycache__/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
